  * Added "gentoo=xkms" boot parameter for forcing X modesetting driver
  * More robust Xorg autoconfiguration
  * Added ASCII virtual keyboard table for OTFE password entry

  * Added UFRaw, a RAW images viewer and converter
  * Added proxychains, a heterogeneous chaining proxyfier
  * Removed experimental I2P support and JamVM
  * Removed FBReader due to its transition to Qt


2012-09-01
  + 2012.3 release

  * Kernel 3.4.7 with overlayfs instead of Unionfs
  * Kernel image is now bundled with initramfs
  * EFI boot binaries are signed for Secure Boot
  * (U)EFI trusted boot chain continues from EFI boot binaries
  * Xorg server 1.12 and Mesa 8.0 with Gallium3D for Radeon cards
  * Nouveau driver is used for Nvidia cards
  * Better support for VMware graphics virtualization

  * Simplified boot parameters handling, most are now omitted
  * Added "blacklist" boot parameter for kernel modules blacklisting
  * Added "bridges" boot parameter for specifying Tor bridges
  * Added "gentoo=noanon" boot parameter for non-anonymous usage mode
  * More rigorous Wi-Fi and Bluetooth (un)blocked states on boot

  * Added small CD -> USB bootstrapping ISO image
  * Added optional PKCS#11 smart-cards support to GnuPG
  * Added reaver-wps, a WiFi Protected Setup cracking tool
  * Added Redshift, a screen color temperature adjuster
  * Disabled GnuPG-S/MIME autoimport of expired certificates
  * GTK-2 and GTK-3 themes are now uniform


2012-06-17
  + 2012.2 release

  * Better handling of "readonly" boot parameter for some boot media
  * Better SD boot media support on some hardware
  * Added USB 3.0 boot media support
  * Last remaining executable PaX exception has been removed

  * Cables communication is now self-contained, based on libmicrohttpd

  * Added VIPS image manipulation toolkit (including nip2 GUI)
  * Added XInput calibrator
  * Removed ePDFView
  * Fixed key retrieval in GNU Privacy Assistant


2012-05-11
  + 2012.1 release
