@@ -59,12 +59,12 @@ wget                    ssl, gnutls             ssl             portage, libqalc
 claws-mail              gnutls                  gnutls
 libetpan                ssl, gnutls             gnutls          claws-mail
 cyrus-sasl              ssl                     ssl             pidgin
-xchat                   ssl                     ssl
+hexchat                 ssl                     ssl
 pidgin                  gnutls, nss             gnutls
 gftp                    ssl                     ssl
 
 
-libgcrypt users: cryptsetup, gnupg, gnome-keyring, libotr(pidgin-otr, xchat-otr),
+libgcrypt users: cryptsetup, gnupg, gnome-keyring, libotr(pidgin-otr),
                  networkmanager, glib-networking, gnupg-pkcs11-scd, ntfs3g
 
 
