@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec /usr/bin/hexchat -d ${XDG_CONFIG_HOME}/hexchat "$@"
