@@ -1,3 +1,0 @@
-#!/bin/sh
-
-exec /usr/bin/xchat -d ${XDG_CONFIG_HOME}/xchat "$@"
