@@ -281,15 +281,13 @@ gcc  ${cflags} -o /usr/local/sbin/udev-watchdog      /usr/local/src/udev-watchdo
 gcc  ${cflags} -o /usr/local/sbin/slay               /usr/local/src/slay.c
 gcc  ${cflags} -o /usr/local/sbin/privsh             /usr/local/src/privsh.c
 gcc  ${cflags} -o /usr/local/bin/log-limit           /usr/local/src/log-limit.c
-gcc  ${cflags} -o /usr/lib/xchat/plugins/cap_sasl.so /usr/local/src/cap_sasl.c -shared -fPIC \
-     -D _GNU_SOURCE -I /usr/include/glib-2.0 -I /usr/lib/glib-2.0/include -Wl,--export-dynamic
 
 cflags="-Wall `portageq envvar CFLAGS`"
 mkdir -p /usr/local/addons/initrd
 klcc ${cflags} -o /usr/local/addons/initrd/init-kexec /usr/local/src/init-kexec.c
 
 strip -s /usr/local/{sbin/{udev-watchdog,slay,privsh},bin/log-limit} \
-         /usr/local/addons/initrd/init-kexec /usr/lib/xchat/plugins/cap_sasl.so
+         /usr/local/addons/initrd/init-kexec
 
 
 sinfo "Generating localization, timezone and keyboard layout menus"
